--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -23,6 +23,12 @@
             text-align: justify;
             font-family: 'Arial', sans-serif;
         }
+
+        h2 {
+            color: red;
+            margin: 30px;
+            border: 20px;
+        }
     </style>
 </head>
 
