--- a/06-WebContentStructure/space.html
+++ b/06-WebContentStructure/space.html
@@ -25,6 +25,44 @@
         become essential in the future. Furthermore, space exploration could pave the way for humanity to become a
         multi-planetary species, ensuring our survival in the event of a global catastrophe.</p>
 
+    <h2>Milestones in Space Travel</h2>
+    <p>The history of space travel is filled with remarkable milestones
+        that have shaped our understanding of the cosmos. The first artificial
+        satellite, Sputnik 1, was launched by the Soviet Union in 1957,
+        marking the beginning of the space age. This event triggered
+        the space race between the United States and the Soviet Union,
+        which culminated in the Apollo 11 mission in 1969. During this mission,
+        Neil Armstrong became the first human to set foot on the Moon,
+        a moment that remains iconic to this day.</p>
+    <p>Milestones in Space Travel
+
+        The history of space travel is filled with remarkable milestones
+        that have shaped our understanding of the cosmos. The first artificial
+        satellite, Sputnik 1, was launched by the Soviet Union in 1957,
+        marking the beginning of the space age. This event triggered
+        the space race between the United States and the Soviet Union,
+        which culminated in the Apollo 11 mission in 1969. During this mission,
+        Neil Armstrong became the first human to set foot on the Moon,
+        a moment that remains iconic to this day.
+
+        As space exploration progressed, so did our technological capabilities.
+        The development of reusable rockets by companies like SpaceX has
+        revolutionized the space industry, making missions more cost-effective
+        and sustainable. This breakthrough has opened up new possibilities
+        for future exploration, including manned missions to Mars and beyond.
+        It is an exciting time for space travel, as advancements in technology
+        continue to push the boundaries of what is possible.</p>
+
+    <p>Another significant milestone was the construction of the International
+        Space Station (ISS), which has been continuously inhabited by astronauts
+        from various countries since the year 2000. The ISS serves as a research
+        laboratory in space, where experiments are conducted in microgravity
+        to advance our knowledge in fields like biology, physics, and medicine.
+        The collaboration between countries on this project demonstrates
+        how space exploration can unite people across borders.</p>
+
+
+
     <h2>The Role of Private Companies</h2>
     <p>In recent years, private companies have taken a leading role in space exploration. SpaceX, founded by Elon Musk,
         has been at the forefront of this movement, developing reusable rockets and pioneering space tourism. The
